<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="app_name">农一网</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_clear_memory_cache">清除缓存</string>
    <string name="msg_default_status">将二维码放入框内，即可自动扫描</string>
    <string name="myShop">我的购物车</string>
    <string name="updateShopNum">修改商品数量</string>
    <string name="updateAddress">修改地址</string>
    <string name="numberSub">-</string>
    <string name="numberAdd">+</string>
    <string name="shopTotalPrice">商品总价(不含运费)</string>
    <string name="checkOut">结算</string>
    <string name="delete">删除</string>
    <string name="collection">收藏</string>
    <string name="sureOrder">确认订单</string>
    <string name="leaveMeassge">给卖家留言</string>

    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="p2refresh_doing_end_refresh">加载中</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>
    <string name="edit">编辑</string>
    <string name="edit_over">完成</string>
    <string name="top_search">热搜</string>

    <string name="my_order">我的订单</string>
    <string name="order_unPay">待付款</string>
    <string name="order_unDelivery">待发货</string>
    <string name="order_unReceiving">待收货</string>
    <string name="order_all">全部</string>
    <string name="num_0.00">0.00元</string>

    <string name="home_hot">热卖商品</string>
    <string name="home_coupon">优惠券专区</string>
    <string name="home_products_weeding">除草剂</string>
    <string name="home_products_insecticide">杀虫剂</string>
    <string name="home_products_sterilize">杀菌剂</string>
    <string name="home_products_nutrient">植物营养调节剂</string>
    <string name="home_product_regulator"><![CDATA[更多调节剂>>]]></string>
    <string name="home_product_water_soluble_fertilizer"><![CDATA[更多水溶肥>>]]></string>
    <string name="yuan">元</string>
    <string name="login">登录/注册</string>
    <string name="more">更多</string>

    <string name="shoppingCar">购物车</string>
    <string name="firstPage">首页</string>
    <string name="classification">分类</string>
    <string name="myNY">我的农一</string>

    <string name="num_0">0</string>
    <string name="num_5">5</string>

    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成</string>
    <string name="myScore">我的积分</string>
    <string name="sign_in">签到</string>

    <string name="ny_SignOut">退出登录</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
	
	<string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="confirm">确定</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="save_succ">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="download_fail">下载失败</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
</resources>
