<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#eeeeee"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#eeeeee">

        <TextView
            android:id="@+id/tv_product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/home_products_weeding"
            android:textColor="#131313"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/tv_product_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="#4b90cb"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/tv_regulator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/home_product_regulator"
            android:textColor="#4b90cb"
            android:textSize="14sp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_water_soluble_fertilizer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="106dp"
            android:gravity="center"
            android:text="@string/home_product_water_soluble_fertilizer"
            android:textColor="#4b90cb"
            android:textSize="14sp"
            android:visibility="gone"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_home_product_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_home_product_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>