<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:text="@string/my_order"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/nongyi_linear"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_unPayment"
            style="@style/my_nongyi_item"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_unPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:src="@drawable/iconfont_daifukuan"/>

            <TextView
                android:id="@+id/tv_unPayment"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignRight="@+id/iv_unPayment"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="-8dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/view_order_dot_bg"
                android:gravity="center"
                android:text="@string/num_0"
                android:textColor="@color/red"
                android:textSize="9sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_unPayment"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/order_unPay"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_unDelivery"
            style="@style/my_nongyi_item"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_unDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:src="@drawable/iconfont_daifahuo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_unDelivery"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/order_unDelivery"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_unReceiving"
            style="@style/my_nongyi_item"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_unReceiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/iconfont_daishouhuo"/>

            <TextView
                android:id="@+id/tv_unReceiving"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignRight="@+id/iv_unReceiving"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="-8dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/view_order_dot_bg"
                android:gravity="center"
                android:text="@string/num_0"
                android:textColor="@color/red"
                android:textSize="9sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_unReceiving"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/order_unReceiving"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_allOrder"
            style="@style/my_nongyi_item"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_allOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:src="@drawable/quanbu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_allOrder"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/order_all"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>