<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/size_50dp"
              android:layout_alignParentBottom="true"
              android:background="@color/bottom_bar_normal_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/rl_HomePageFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_Home"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_home_btn"
                android:contentDescription="@string/firstPage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_Home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/firstPage"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ClassificationFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_Classification"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_message_btn"
                android:contentDescription="@string/classification"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_Classification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/classification"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ShoppingCartFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_ShoppingCart"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_selfinfo_btn"
                android:contentDescription="@string/shoppingCar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_ShoppingCart"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/shoppingCar"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_dot2"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignRight="@+id/iv_ShoppingCart"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="-6dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/shoppingcar_dot_bg"
                android:gravity="center"
                android:text="@string/num_5"
                android:textColor="@color/white"
                android:textSize="10sp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_MyNYFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onTabClicked"
            >

            <ImageView
                android:id="@+id/iv_MyNY"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_square_btn"
                android:contentDescription="@string/myNY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_MyNY"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/myNY"
                android:textColor="@drawable/tab_menu_deal_text"
                android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>